[package]
name = "vdrmtd"
version = "0.1.0"
edition = "2024"
default-run = "vdrmtd"

[dependencies]
three-d = "0.17.0"
image = "0.25.0"
# vdrm-alg = { git = "https://github.com/hikaricai/vdrm.git", package = "vdrm-alg", branch = "master" }
vdrm-alg = { path = "/Users/bytedance/rust/vdrm/vdrm-alg/" }
three-d-asset = { version = "0.7", features = ["obj", "png", "gltf"] }

[[bin]]
name = "test_png"
path = "test_png.rs"

[[bin]]
name = "vdrmtd"
path = "src/main.rs"